# LIF-project

./: CLAUDE.md  LIF Model.ipynb  README.md  environment.yml
.claude/hooks/: session-start.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml
lif_core/: .gitignore  README.md  pyproject.toml
lif_core/src/lif_core/: __init__.py  expressions.py  models.py  simulation.py
lif_core/tests/: test_lif_core.py
web-app/: .gitignore  README.md
web-app/backend/: conftest.py  requirements.txt
web-app/backend/app/: __init__.py  config.py  main.py  schemas.py
web-app/backend/app/routers/: simulation.py
web-app/backend/tests/: test_api.py
web-app/frontend/: index.html  package-lock.json  package.json  playwright.config.js
web-app/frontend/css/: styles.css
web-app/frontend/js/: api.js  app.js  lif.js  plot.js
web-app/frontend/tests/: serve.js  smoke.spec.js
web-app/notebook/: README.md
